Update at 10pm each day

--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -1,6 +1,9 @@
 name: Docker
 
 on:
+  schedule:
+    - cron: "0 22 * * *"
+
   push:
     # Publish `master` as Docker `latest` image.
     branches:
